Updated CSS to use box-sizing: border-box to avoid overflow Pinned search bar in the top of the page to always be visible

--- a/src/components/BusinessList/businessList.module.css
+++ b/src/components/BusinessList/businessList.module.css
@@ -3,5 +3,5 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     gap: 30px 50px;
-    padding: 20px 25px;
+    padding: 55px 25px;
 }
