--- a/src/components/SearchBar/searchBar.module.css
+++ b/src/components/SearchBar/searchBar.module.css
@@ -1,8 +1,12 @@
 .searchBar {
+    overflow: hidden;
     display: flex;
     justify-content: space-between;
-    padding: 10px 25px;
+    width: 100%;
     background-color: blueviolet;
+    position: fixed;
+    padding: 10px 25px;
+    height: 45px;
 }
 
 .sortInput {
